tmux: disable '@continuum-boot'

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # set-option -g prefix C-a
 # unbind-key C-b
 # bind-key C-a send-prefix# allow to reload our configuration
-
+#
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -15,18 +15,16 @@ setw -g pane-base-index 1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @continuum-boot 'on'
-set -g @continuum-save-interval '5'
 
 set -g default-terminal "screen-256color"
 setw -gq utf8 on
 setw -g mouse on
 set -g history-limit 200000
+set -g @continuum-restore 'on'
+# set -g @continuum-boot 'on'
+set -g @continuum-save-interval '5'
 set-window-option -g mode-keys vi
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
