--- a/i3/config/i3/config
+++ b/i3/config/i3/config
@@ -193,66 +193,77 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # "dummy" bar
-# bar {
-#     i3bar_command i3bar -t
-# 
-#     height 24
-#     mode dock
-#     position top
-#     output primary
-# }
+bar {
+    status_command i3status-rs ${HOME}/.config/i3/i3status-rust.toml
+
+    height 24
+    mode dock
+    position top
+    output primary
+}
 
 # Apply colors
 exec --no-startup-id xrdb ${HOME}/.Xresources
 
 # Colors set from ~/.Xresources
-set_from_resource	$background	background
-set_from_resource	$foreground	foreground
-set_from_resource	$color0		color0
-set_from_resource 	$color1 	color1
-set_from_resource 	$color2 	color2
-set_from_resource 	$color3 	color3
-set_from_resource 	$color4 	color4
-set_from_resource 	$color5 	color5
-set_from_resource 	$color6		color6
-set_from_resource	$color7		color7
-set_from_resource	$color8		color8
-set_from_resource	$color9		color9
-set_from_resource	$color10	color10
-set_from_resource	$color11	color11
-set_from_resource	$color12	color12
-set_from_resource	$color13	color13
-set_from_resource	$color14	color14
-set_from_resource	$color15	color15
+set_from_resource   $background background
+set_from_resource   $foreground foreground
+set_from_resource   $color0     color0
+set_from_resource   $color1     color1
+set_from_resource   $color2     color2
+set_from_resource   $color3     color3
+set_from_resource   $color4     color4
+set_from_resource   $color5     color5
+set_from_resource   $color6     color6
+set_from_resource   $color7     color7
+set_from_resource   $color8     color8
+set_from_resource   $color9     color9
+set_from_resource   $color10    color10
+set_from_resource   $color11    color11
+set_from_resource   $color12    color12
+set_from_resource   $color13    color13
+set_from_resource   $color14    color14
+set_from_resource   $color15    color15
 
 # Theme colors
-# class                 border  	backgr. 	text    	indic.  	child_border
+# class                     border      backgr.     text        indic.      child_border
 # My colors
-client.background       $background
-client.focused         	$foreground	$background	$foreground	$color4		$color4	
-client.unfocused       	$foreground	$background	$foreground	$background	$background
-client.focused_inactive	$foreground	$background	$foreground	$background	$background
-client.urgent		    $foreground	$background	$foreground	$background	$background
-client.placeholder	    $foreground	$background	$foreground	$background	$background
+client.background           $background
+client.focused              $foreground $background $foreground $color2     $color4
+client.unfocused            $foreground $background $foreground $background $background
+client.focused_inactive     $foreground $background $foreground $background $background
+client.urgent               $foreground $background $foreground $background $background
+client.placeholder          $foreground $background $foreground $background $background
 
 # polybar
-exec_always --no-startup-id ${HOME}/.config/polybar/launch.sh
+# exec_always --no-startup-id ${HOME}/.config/polybar/launch.sh
+
+# Correct handling of floating windows
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="bubble"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [window_role="dialog"] floating enable
+for_window [window_role="menu"] floating enable
+for_window [window_role="Preferences"] floating enable
+for_window [class="com-wolfram-jlink-Reader"] floating enable
+for_window [class="Gifview"] floating enable
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
 new_window pixel 1
 new_float pixel 1
+for_window [class=".*"] border pixel 2
 
 # Custom
 focus_follows_mouse no
-hide_edge_borders none
+# hide_edge_borders none
 
 # Sound
-exec --no-startup-id volumeicon
+# exec --no-startup-id volumeicon
 bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 
 # Gaps
-# smart_gaps on
-gaps top 28
+smart_gaps on
+# gaps top 28
 gaps inner 8
 smart_borders no_gaps
 hide_edge_borders smart_no_gaps
@@ -264,14 +275,14 @@ exec --no-startup-id feh --bg-scale ${HOME}/.config/i3/wallpapers/manjaro-cat.jp
 exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -option grp:win_space_toggle"
 
 # Multiple monitors
-exec --no-startup-id xrandr --output HDMI-1 --auto --above eDP-1 --output eDP-1 --auto --primary
+exec --no-startup-id refresh_display_layout
 
 # Bindings
 bindsym $mod+m move workspace to output down
 bindsym $mod+F7 exec refresh_display_layout
 
 # Set shut down, restart and locking features
-bindsym $mod+Control+l mode "$mode_system"
+# bindsym $mod+Control+l mode "$mode_system"
 bindsym XF86PowerOff mode "$mode_system"
 
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
@@ -305,15 +316,17 @@ mode "$exit" {
 # Autostart applications
 exec --no-startup-id refresh_display_layout
 exec --no-startup-id compton --config ~/.config/compton.conf -b
-exec --no-startup-id megasync
-exec --no-startup-id deluge
-exec --no-startup-id optimus-manager-qt
+# exec --no-startup-id megasync
+# exec --no-startup-id deluge
+# exec --no-startup-id optimus-manager-qt
 exec --no-startup-id blueman-applet
 exec --no-startup-id ${HOME}/app/Telegram/Telegram -startintray
 exec --no-startup-id xsettingsd
 exec --no-startup-id xautolock -time 30 -locker "i3lock -t -i ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg"
-exec --no-startup-id slack -us
-exec --no-startup-id xfce4-power-manager
+# exec --no-startup-id slack -us
+# exec --no-startup-id xfce4-power-manager
 exec --no-startup-id redshift-gtk -l 59.937500:30.308611 -t 6500:3000
-exec_always --no-startup-id google-drive-ocamlfuse ~/gdrive
+exec --no-startup-id clipit
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec_always --no-startup-id google-drive-ocamlfuse ~/gdrive
 
