--- a/i3/config/i3/i3status-rust.toml
+++ b/i3/config/i3/i3status-rust.toml
@@ -35,7 +35,7 @@ format = "{percentage}"
 # aur_command = "checkupdates-aur"
 # hide_when_uptodate = true
 
-# [[block]]
-# block = "apt"
-# format = "{count}"
+[[block]]
+block = "apt"
+format = "{count}"
 
