--- a/i3/config/i3/config
+++ b/i3/config/i3/config
@@ -1,4 +1,3 @@
-
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 #
@@ -31,12 +30,21 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use pactl to adjust volume in PulseAudio.
+# Refresh status bar
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Use pactl to adjust volume in PulseAudio.
+bindsym XF86AudioRaiseVolume    exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume    exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute           exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute        exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Confugure brightness
+bindsym XF86MonBrightnessUp     exec xbacklight -inc 10 && $refresh_i3status
+bindsym XF86MonBrightnessDown   exec xbacklight -dec 10 && $refresh_i3status
+
+# Refresh dysplay layout
+bindsym XF86Display             exec refresh_display_layout
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
@@ -57,7 +65,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym $mod+d exec "rofi -lines 15 -modi drun -show drun"
+bindsym $mod+d exec rofi -lines 15 -modi drun -show drun -icon-theme Papirus -show-icons
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -93,7 +101,7 @@ bindsym $mod+h split h
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $mod+Shift+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
@@ -192,7 +200,7 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# "dummy" bar
+# Primary
 bar {
     # status_command i3status-rs ${HOME}/.config/i3/i3status-rust.toml
     status_command ${HOME}/.cargo/bin/i3status-rs ${HOME}/.config/i3/i3status-rust.toml
@@ -204,11 +212,22 @@ bar {
     tray_output primary
 }
 
+# 2nd display
 bar {
     height 24
     mode dock
     position top
     output HDMI-1
+    tray_output none
+}
+
+# 3rd display
+bar {
+    height 24
+    mode dock
+    position top
+    output DP-1
+    tray_output none
 }
 
 # Apply colors
@@ -277,18 +296,32 @@ gaps inner 8
 smart_borders no_gaps
 hide_edge_borders smart_no_gaps
 
-# Background wallpaper
-exec --no-startup-id feh --bg-scale ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg
-
 # Keyboard layout
 exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -option grp:win_space_toggle"
 
 # Multiple monitors
 exec --no-startup-id refresh_display_layout
 
+# Background wallpaper
+exec --no-startup-id feh --bg-fill ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg
+
 # Bindings
-bindsym $mod+m move workspace to output down
-bindsym $mod+F7 exec refresh_display_layout
+bindsym Print           exec shutter --full
+bindsym Shitf+Print     exec shutter --active
+
+# Moving workspace
+bindsym $mod+m mode "$move_workspace"
+set $move_workspace Move workspace (Up), (Down), (Left), (Right)
+mode "$move_workspace" {
+    bindsym Up      move workspace to output up
+    bindsym Down    move workspace to output down
+    bindsym Left    move workspace to output left
+    bindsym Right   move workspace to output right
+
+    # exit system mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 # Set shut down, restart and locking features
 # bindsym $mod+Control+l mode "$mode_system"
