--- a/i3/config/i3/config
+++ b/i3/config/i3/config
@@ -301,6 +301,9 @@ exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -option grp:win_space
 
 # Multiple monitors
 exec --no-startup-id refresh_display_layout
+workspace 1 output eDP-1
+workspace 2 output DP-1
+workspace 3 output HDMI-1
 
 # Background wallpaper
 exec --no-startup-id feh --bg-fill ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg
