--- a/i3/config/i3/config
+++ b/i3/config/i3/config
@@ -275,6 +275,7 @@ for_window [window_role="menu"] floating enable
 for_window [window_role="Preferences"] floating enable
 for_window [class="com-wolfram-jlink-Reader"] floating enable
 for_window [class="Gifview"] floating enable
+for_window [class="Nautilus"] floating enable
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
 new_window pixel 1
@@ -304,13 +305,15 @@ exec --no-startup-id refresh_display_layout
 workspace 1 output eDP-1
 workspace 2 output DP-1
 workspace 3 output HDMI-1
+workspace 4 output HDMI-1
+workspace 5 output HDMI-1
 
 # Background wallpaper
-exec --no-startup-id feh --bg-fill ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg
+exec --no-startup-id sleep 1; feh --bg-fill ${HOME}/.config/i3/wallpapers/manjaro-cat.jpg
 
 # Bindings
-bindsym Print           exec shutter --full
-bindsym Shitf+Print     exec shutter --active
+bindsym Print       exec shutter --full --min_at_startup
+bindsym $mod+Print  exec shutter --active --min_at_startupp
 
 # Moving workspace
 bindsym $mod+m mode "$move_workspace"
